--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0
+version: 2.0.0
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -32,10 +32,15 @@ dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   python_shell: ^0.0.7
+  uuid: ^3.0.6
   google_fonts: ^6.0.0
   cool_alert: ^2.0.1
   http: ^1.2.2
   shared_preferences: ^2.3.2
+  google_generative_ai: ^0.4.6
+  url_launcher:
+  unity_ads_plugin: ^0.3.20 
+  flutter_share: ^2.0.0   # google_mobile_ads: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
