--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.sddev" "\0"
             VALUE "FileDescription", "mock24x7" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "mock24x7" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.sddev. All rights reserved." "\0"
             VALUE "OriginalFilename", "mock24x7.exe" "\0"
             VALUE "ProductName", "mock24x7" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
