--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'somnathdashs.github.io' # Remove this line if you wish to publish t
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0
+version: 2.1.0
 
 environment:
   sdk: ^3.5.3
@@ -39,7 +39,10 @@ dependencies:
   intl: ^0.19.0
   share_plus: ^10.0.3  # The following adds the Cupertino Icons font to your application.
   url_launcher: ^6.1.12
-  unity_ads_plugin: ^0.3.20
+  google_mobile_ads: ^5.2.0
+  restart_app: ^1.3.2
+  video_player: 
+  percent_indicator:   
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,7 +66,6 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assetss/buy_coffee.png
     - assetss/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
